# Aegis

./: CMakeLists.txt  LICENSE  NOTICE  README.md
application/: CMakeLists.txt
application/include/entry/: entry_init.h  entry_main.h  entry_platform.h
application/src/: main.c
application/src/entry/: CMakeLists.txt  entry_init.c  entry_main.c
docs/: USAGE.en.md  快速使用指南.zh-CN.md
examples/: README.md
examples/event_driven/: CMakeLists.txt  main.c
examples/minimal_app/: CMakeLists.txt  demo_application.c  demo_application.h  demo_domain.c  demo_domain.h  main.c
framework/: CMakeLists.txt
framework/include/application/: app_cmd_service.h  app_command.h  app_domain_assembler.h  app_domain_converter.h  app_dto.h  app_init.h  app_macros.h  app_module.h  app_query.h
framework/include/common/: compile_time.h  framework_config.h  isr_safety.h  mem_pool.h  ring_buffer.h  trace.h  types.h
framework/include/domain/: domain_aggregate.h  domain_aggregate_root.h  domain_entity.h  domain_event.h  domain_repository.h  domain_repository_read.h  domain_repository_write.h  domain_service.h  domain_value_object.h
framework/include/entry/: entry_init.h  entry_main.h  entry_platform.h
framework/include/infrastructure/: hal_gpio.h  hal_timer.h  infrastructure_repository_inmem.h
framework/port/stm32f030/: README.md  entry_platform.c  port_critical.c  port_hal_gpio.c  port_hal_timer.c
framework/port/x86_sim/: CMakeLists.txt  entry_platform.c  port_hal_gpio.c
framework/src/application/: CMakeLists.txt  app_cmd_service.c  app_command.c  app_domain_assembler.c  app_domain_converter.c  app_dto.c  app_init.c  app_module.c  app_query.c
framework/src/common/: CMakeLists.txt  error_codes.c  mem_pool.c  ring_buffer.c  trace_log.c
framework/src/domain/: CMakeLists.txt  domain_aggregate.c  domain_aggregate_root.c  domain_entity.c  domain_event.c  domain_service.c  domain_value_object.c
framework/src/entry/: CMakeLists.txt  entry_init.c  entry_main.c
framework/src/infrastructure/: CMakeLists.txt  infrastructure_repository_inmem.c
include/application/: app_command.h  app_init.h  app_query.h
include/common/: critical.h  error_codes.h  mem_pool.h  trace.h  types.h
include/domain/: domain_actuator.h  domain_entity.h  domain_event.h  domain_repository.h  domain_sensor.h
include/entry/: entry_init.h  entry_main.h
port/x86_sim/: port_critical.c  port_hal_timer.c
tests/: CMakeLists.txt
tests/application/: test_app_command.c
tests/common/: test_mem_pool.c
tests/domain/: test_domain_event.c  test_domain_event_edge_cases.c
tests/integration/: test_repository_event_integration.c
tools/: check_isr_safety.py  check_layering.py  check_naming.py  check_no_globals.py  check_no_malloc.sh  check_traceability.py  rename_to_aegis.py  scaffold_module.py
